# GenericDelegator_CPP11

./: CGenericDelegater.h  CMakeLists.txt  README.md  main.cpp
